# Coral-VoiceFrench-Agent

./: .env.example  .env.sample  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
